nullaway_error_11A3B6A9-BA00-42EC-B670-D571A86C1586.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-orm/src/main/java/org/springframework/orm/jpa/support/PersistenceAnnotationBeanPostProcessor.java:878: error: [NullAway] dereferenced expression properties is @Nullable
				for (String propertyName : new TreeSet<>(properties.stringPropertyNames())) {
				                                                   ^
    (see http://t.uber.com/nullaway )
